<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">
   <TextView
       android:id="@+id/tvTopic"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/topic_text"
       android:background="@drawable/rectangle"
       android:layout_alignParentTop="true"
       android:paddingBottom="@dimen/padding_20dp"
       android:paddingTop="@dimen/padding_20dp"
       android:textColor="#fff"
       android:textSize="@dimen/text_30sp"
       android:paddingLeft="80dp"

       />
   <TextView
       android:id="@+id/tvBooks"
       style="@style/custom_text_white"
       android:text="@string/books_text"
       android:background="@drawable/rectangle"
       android:layout_below="@+id/tvTopic"
       android:layout_alignParentStart="true"

       />
   <TextView
       android:id="@+id/tvPodcasts"
       style="@style/custom_text_blue"
       android:text="@string/podcast_text"
       android:background="@drawable/rectangle2"
       android:layout_toRightOf="@+id/tvBooks"
       android:layout_below="@+id/tvTopic"
       android:layout_alignParentEnd="true"


       />
   <TextView
       android:id="@+id/tvNews"
       style="@style/custom_text_white"
       android:text="@string/news_text"
       android:background="@drawable/rectangle"
       android:layout_below="@+id/tvBooks"
       android:layout_alignParentStart="true"
       />

   <TextView
       android:id="@+id/tvBusiness"
       style="@style/custom_text_white"
       android:text="@string/business_text"
       android:background="@drawable/rectangle"
       android:layout_below="@+id/tvPodcasts"
       android:layout_toRightOf="@+id/tvNews"
       android:layout_alignParentEnd="true"
       />
   <TextView
       android:id="@+id/tvEntertainment"
       style="@style/custom_text_white"
       android:text="@string/entertainment_text"
       android:background="@drawable/rectangle"
       android:layout_below="@+id/tvNews"
       android:layout_alignParentStart="true"

       />

   <TextView
       android:id="@+id/tvSports"
       style="@style/custom_text_blue"
       android:text="@string/sports_text"
       android:background="@drawable/rectangle2"
       android:layout_below="@+id/tvBusiness"
       android:layout_toRightOf="@id/tvEntertainment"
       android:layout_alignParentEnd="true"

       />
   <TextView
       android:id="@+id/tvTechnology"
       style="@style/custom_text_white"
       android:text="@string/technology_text"
       android:background="@drawable/rectangle"
       android:layout_below="@+id/tvEntertainment"
       android:layout_alignParentStart="true"

       />
   <TextView
       android:id="@+id/tvPronunciation"
       style="@style/custom_text_white"
       android:text="@string/pronunciation_text"
       android:background="@drawable/rectangle"
       android:layout_below="@+id/tvSports"
       android:layout_toRightOf="@+id/tvTechnology"
       android:layout_alignParentEnd="true"

      />

   <TextView
       android:id="@+id/tvGrammar"
       style="@style/custom_text_white"
       android:text="@string/grammar_text"
       android:background="@drawable/rectangle"
       android:layout_below="@+id/tvTechnology"
       android:layout_alignParentStart="true"

       />
   <TextView
       android:id="@+id/tvHealth"
       style="@style/custom_text_white"
       android:text="@string/health_text"
       android:background="@drawable/rectangle"
       android:layout_below="@+id/tvTechnology"
       android:layout_toRightOf="@+id/tvGrammar"
       android:layout_alignParentEnd="true"

       />

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:background="#0583EA"
       android:text="@string/continue_text"
       android:padding="20dp"
       android:textSize="20sp"
       android:textColor="#fff"
       android:textColorHighlight="@color/black"/>
</RelativeLayout>